<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <!-- User name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- label -->
        <TextView
            style="@style/CategoryTheme"
            android:text="@string/username_category" />
        <!-- User name field -->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_username" />
    </LinearLayout>

    <!-- Swim style category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- label -->
        <TextView
            style="@style/CategoryTheme"
            android:text="@string/swimStyle_category" />
        <!-- swim style spinner -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="5dp">

            <Spinner
                android:id="@+id/spinner_swimStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <!-- Lap distance category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">
        <!-- label -->
        <TextView
            style="@style/CategoryTheme"
            android:text="@string/lapDistance_category" />
        <!-- swim style spinner -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            <!-- lap swimmer spinner -->
            <Spinner
                android:id="@+id/spinner_lapDistance"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"></Spinner>
        </LinearLayout>
    </LinearLayout>

    <!-- Next Button -->
    <Button
        android:id="@+id/button_info_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/next_button" />


</LinearLayout>